Change log for duff
===================

Maintained since version 0.3.1.

2012-01-23  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.c (main): Saved header digest use before processing entries.
 * duff.c: Added header_uses_digest global flag.
 * duffentry.c (report_cluster): Ensured that first cluster entry has digest.
 * duffentry.c (compare_entries): Added more early-out cases.
 * duffentry.c (get_entry_digest): Stopped reading empty files.
 * duffentry.c (generate_entry_digest): Added function.
 * duffentry.c (get_entry_digest): Hash sample if it contains entire file.
 * duffutil.c (error, warning): Prefixed program name to output.
 * duffutil.c (set_digest_function): Added function.
 * duffutil.c (digest_init): Added function.
 * duffutil.c (digest_update): Added function.
 * duffutil.c (digest_finish): Added function.
 * duff.c duffutil.c duffentry.c: Moved all calls to sha to duffutil.
 * duff.c duffutil.c duffentry.c: Made digest_function private to duffutil.
 * duff.1 duff.c: Changed default sampling limit to zero.

2012-01-22  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.c duff.h duffentry.c: Changed sampling to read (up to) the first
 SAMPLE_SIZE bytes (credits to Kamal Mostafa).
 * duff.c: Clarified help for -H and -L flags.
 * duff.c: Added list of supported digest functions to help for -d flag.

2012-01-20  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.1: Added missing -type f to example (credits to Stephan Hegel).

2012-01-19  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.h: Tagged functions error and warning with GCC attributes.
 * duff.1: Clarified default sampling limit.
 * duffdriver.c: Renamed cluster index variable to index.

2012-01-18  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.1: Clarified language regarding -t and %d.
 * duff.1: Made the output of examples human-readable.

2012-01-16  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.1: Added new cluster header to description of -f flag.