@@ -41,6 +41,7 @@ typedef enum Status Status;
 typedef enum SymlinkMode SymlinkMode;
 typedef enum Function Function;
 typedef struct Entry Entry;
+typedef struct List List;
 typedef struct Directory Directory;
 
 /* Status modes for entries.
@@ -89,8 +90,6 @@ struct Directory
  */
 struct Entry
 {
-  Entry* prev;
-  Entry* next;
   char* path;
   off_t size;
   dev_t device;
@@ -98,6 +97,15 @@ struct Entry
   Status status;
   uint8_t* digest;
   uint8_t* sample;
+};
+
+/* Represents a list of files.
+ */
+struct List
+{
+  Entry* entries;
+  size_t allocated;
+  size_t available;
 };
 
 /* Message digest functions.
@@ -111,15 +119,16 @@ enum Function
 };
 
 /* These are defined and documented in duffentry.c */
-Entry* make_entry(const char* path, const struct stat* sb);
-void link_entry(Entry** head, Entry* entry);
-void unlink_entry(Entry** head, Entry* entry);
+void fill_entry(Entry* entry, const char* path, const struct stat* sb);
 void free_entry(Entry* entry);
-void free_entry_list(Entry** entries);
 int compare_entries(Entry* first, Entry* second);
 void generate_entry_digest(Entry* entry);
 
 /* These are defined and documented in duffutil.c */
+void entry_list_init(List* list);
+Entry* entry_list_alloc(List* list);
+void entry_list_empty(List* list);
+void entry_list_free(List* list);
 int read_path(FILE* stream, char* path, size_t size);
 void kill_trailing_slashes(char* path);
 void set_digest_function(Function function);
